--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,10 +3,17 @@
 @tailwind utilities;
 
 #root {
+  font-family: "Luckiest Guy", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+/* #root {
   font-family: "Ancizar Serif", serif;
     font-optical-sizing: auto;
     font-style: normal;
-}
+} */
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
