--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
+.hero {
   font-family: "Luckiest Guy", cursive;
   font-weight: 400;
   font-style: normal;
