--- a/frontend/src/styles/footerStyles.css
+++ b/frontend/src/styles/footerStyles.css
@@ -35,12 +35,15 @@ body {
 .desc, .note {
   font-size: 0.9rem;
   margin: 10px 0;
+  color: #333;
+  font-style: italic;
 }
 
 ul {
   list-style: none;
   padding: 0;
   font-size: 0.9rem;
+  color: red;
 }
 
 .brands h4 {
@@ -65,6 +68,7 @@ ul {
 
 h3 {
   margin-top: 15px;
+  font-weight: bold;
   font-size: 1.2rem;
   border-bottom: 1px solid #aaa;
 }
